--- a/DjangoTutorial-main/studybud/base/templates/base/feed_component.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/feed_component.html
@@ -1,14 +1,14 @@
 <div>
-    {% for room in rooms %}
+    {% for job in jobs %}
         <div>
-            {% if request.user == room.host %}
-            <a href="{% url 'update-room' room.id %}">Edit</a>
-            <a href="{% url 'delete-room' room.id %}">Delete</a>
+            {% if request.user == job.host %}
+            <a href="{% url 'update-job' job.id %}">Edit</a>
+            <a href="{% url 'delete-job' job.id %}">Delete</a>
             {% endif %}
 
-            <a href="{% url 'user-profile' room.host.id %}">@{{room.host.username}}</a>
-            <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-            <small>{{room.topic.name}}</small>
+            <a href="{% url 'user-profile' job.host.id %}">Company: {{job.host.username}}</a>
+            <h5>{{job.id}} -- <a href="{% url 'job' job.id %}">Position: {{job.name}}</a></h5>
+            <small>{{job.field.name}}</small>
             <hr>
         </div>
 
