--- a/DjangoTutorial-main/studybud/base/templates/base/profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/profile.html
@@ -19,7 +19,7 @@
 
 <div class="profile-container">
     <div>
-        {% include 'base/topic_component.html' %}
+        {% include 'base/field_component.html' %}
     </div>
 
     <div>
