--- a/DjangoTutorial-main/studybud/base/templates/base/room.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/room.html
@@ -39,7 +39,7 @@
 
 
         <div class="comment-wrapper">
-            <h3>Conversation</h3>
+            <h3>Job Details</h3>
             <hr>
 
             {% for message in room_messages %}
