--- a/DjangoTutorial-main/studybud/base/templates/base/edit_profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/edit_profile.html
@@ -6,12 +6,11 @@
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     
-    {{ form.as_p }}
+    {{ user_form.as_p }}
+    {{ profile_form.as_p }}
 
     <button type="submit">Save Changes</button>
   </form>
-
-  <br>
 
   <a href="{% url 'user-profile' user.id %}">Back to Profile</a>
 
