--- a/DjangoTutorial-main/studybud/base/templates/base/home.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/home.html
@@ -5,7 +5,7 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-columns: 3fr 1fr;
     }
 </style>
 
@@ -13,14 +13,10 @@
 <div class="home-container">
 
     <div>
-       {% include 'base/field_component.html' %}
-    </div>
-
-    <div>
         <h5>{{job_count}} jobs found!</h5>
         <a href="{% url 'create-room' %}"></a>
 
-        {% include 'base/feed_component.html' %}
+        {% include 'base/job_list.html' %}
        
     </div>
 
