Changed all occurences of room to jobs except some html file names
Fixed URL names with the jobs too. Also no crashing from job_listing.html

--- a/DjangoTutorial-main/studybud/base/templates/base/home.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/home.html
@@ -14,7 +14,7 @@
 
     <div>
         <h5>{{job_count}} jobs found!</h5>
-        <a href="{% url 'create-room' %}"></a>
+        <a href="{% url 'create-Job' %}"></a>
 
         {% include 'base/job_list.html' %}
        
