--- a/DjangoTutorial-main/studybud/base/templates/base/feed_component.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/feed_component.html
@@ -1,16 +1,82 @@
+{% load static %}
+
+<style>
+.swipeButton {
+    width: 200px;
+    height: 150px;
+}
+
+#leftButton {
+    margin-right: 250px;
+}
+
+#rightButton {
+    margin-left: 250px;
+}
+
+img {
+    width: 200px;
+    height: 150px;
+}
+
+.job-container {
+    display: none; /* Initially hide all jobs */
+}
+
+.job-container.active {
+    display: block; /* Show only the active job */
+}
+</style>
+
 <div>
+    <!-- Loop through all jobs -->
     {% for job in jobs %}
-        <div>
-            {% if request.user == job.host %}
-            <a href="{% url 'update-job' job.id %}">Edit</a>
-            <a href="{% url 'delete-job' job.id %}">Delete</a>
-            {% endif %}
+    <div class="job-container">
+        {% if request.user == job.host %}
+        <a href="{% url 'update-job' job.id %}">Edit</a>
+        <a href="{% url 'delete-job' job.id %}">Delete</a>
+        {% endif %}
 
-            <a href="{% url 'user-profile' job.host.id %}">Company: {{job.host.username}}</a>
-            <h5>{{job.id}} -- <a href="{% url 'job' job.id %}">Position: {{job.name}}</a></h5>
-            <small>{{job.field.name}}</small>
-            <hr>
-        </div>
-
+        <a href="{% url 'user-profile' job.host.id %}">Company: {{job.host.username}}</a>
+        <h5>{{job.id}} -- <a href="{% url 'job' job.id %}">Position: {{job.name}}</a></h5>
+        <small>{{job.field.name}}</small>
+        <hr>
+        
+        <!-- Buttons to swipe -->
+        <button class="swipeButton" id="leftButton"><img src="{% static 'images/redX.jpg' %}"></button>
+        <button class="swipeButton" id="rightButton"><img src="{% static 'images/greenCheck.jpg' %}"></button>
+        <p id="test"></p>
+    </div>
     {% endfor %}
+
+    <script>
+    // Variables
+    const jobContainers = document.querySelectorAll('.job-container'); // Get all job containers
+    let currentJobIndex = 0; // Start with the first job
+
+    // Show the first job
+    jobContainers[currentJobIndex].classList.add('active');
+
+    // Declaring Buttons
+    const denyBut = document.querySelector('#leftButton');
+    const acceptBut = document.querySelector('#rightButton');
+    
+    // Initializing Buttons
+    denyBut.onclick = denyApp;
+    acceptBut.onclick = acceptApp;
+
+    // Deny application (move to next job)
+    function denyApp() {
+        jobContainers[currentJobIndex].classList.remove('active');
+        currentJobIndex = (currentJobIndex + 1) % jobContainers.length;
+        jobContainers[currentJobIndex].classList.add('active');
+    }
+
+    // Accept application (move to next job)
+    function acceptApp() {
+        jobContainers[currentJobIndex].classList.remove('active');
+        currentJobIndex = (currentJobIndex + 1) % jobContainers.length;
+        jobContainers[currentJobIndex].classList.add('active');
+    }
+    </script>
 </div>
