--- a/DjangoTutorial-main/studybud/base/templates/base/activity_component.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/activity_component.html
@@ -2,12 +2,12 @@
         <hr>
         {% for message in job_messages %}
         <div>
-            <small><a href="{% url 'user-profile' message.user.id %}">Company: {{message.user}}</a><br>Posted: {{message.created|timesince}} ago</small>
+            <small><a class ="btn btn-info btn-sm" type ="button" href="{% url 'user-profile' message.user.id %}">Company: {{message.user}}</a><br>Posted: {{message.created|timesince}} ago</small>
             <!--<small>replied to "{{message.job}}" </small>-->
 
             <p>{{message}}</p>
             {% if request.user == message.user %}
-                <a href="{% url 'delete-message' message.id %}">Delete</a>
+                <a class ="btn btn-info " type ="button" href="{% url 'delete-message' message.id %}">Delete</a>
 
                 {% endif %}
                 <hr>
