--- a/DjangoTutorial-main/studybud/base/templates/base/field_component.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/field_component.html
@@ -2,7 +2,7 @@
 <hr>
 <!-- -->
 <div>
-    <a href="{% url 'home' %}">Home</a>
+    <a class ="btn btn-secondary" type ="button" href="{% url 'home' %}">Home</a>
 </div>
 
 {% for field in fields %}
