--- a/DjangoTutorial-main/studybud/templates/navbar.html
+++ b/DjangoTutorial-main/studybud/templates/navbar.html
@@ -8,12 +8,12 @@
 </form>
 
 {% if request.user.is_authenticated %}
-<p>Hello {{request.user}}</p>
-<a href="{% url 'user-profile' request.user.id %}">My Profile</a>
-<a href="{% url 'logout' %}">Logout</a>
+<p> <i class="fa fa-user-o fa-2x" aria-hidden="true"></i>Hello {{request.user}}</p>
+<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'user-profile' request.user.id %}">My Profile</a>
+<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'logout' %}">Logout</a>
 
 {% else %}
-<a href="{% url 'login' %}">Login</a>
+<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'login' %}">Login</a>
 
 {% endif %}
 
