--- a/DjangoTutorial-main/studybud/templates/main.html
+++ b/DjangoTutorial-main/studybud/templates/main.html
@@ -1,15 +1,17 @@
 <!DOCTYPE  html>
+{% load static %}
+
 <html>
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Job Swipe</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/solar/bootstrap.min.css">
-
-        
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
     </head>
 
