--- a/DjangoTutorial-main/studybud/templates/navbar.html
+++ b/DjangoTutorial-main/studybud/templates/navbar.html
@@ -9,11 +9,11 @@
 
 {% if request.user.is_authenticated %}
 <p> <i class="fa fa-user-o fa-2x" aria-hidden="true"></i>Hello {{request.user}}</p>
-<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'user-profile' request.user.id %}">My Profile</a>
-<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'logout' %}">Logout</a>
+<a class ="btn btn-profile navbar-btn" type ="button" href="{% url 'user-profile' request.user.id %}">My Profile</a>
+<a class ="btn btn-logout navbar-btn" type ="button" href="{% url 'logout' %}">Logout</a>
 
 {% else %}
-<a class ="btn btn-info navbar-btn" type ="button" href="{% url 'login' %}">Login</a>
+<a class ="btn btn-login navbar-btn" type ="button" href="{% url 'login' %}">Login</a>
 
 {% endif %}
 
