--- a/DjangoTutorial-main/studybud/base/templates/base/profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/profile.html
@@ -68,7 +68,7 @@
         <p>No jobs posted yet.</p>
     {% endif %}
 
-<h3>Messages:</h3>
+<h3>Sent Applications:</h3>
     {% if job_messages %}
         <ul>
             {% for message in job_messages %}
