--- a/DjangoTutorial-main/studybud/base/templates/base/login_register.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/login_register.html
@@ -15,8 +15,6 @@
         <input type="submit" value="Login" />
     </form>
         
-    </form>
-
     <p>Havent signed up yet?</p>
     <a href="{% url 'register' %}">Sign up</a>
 </div>
@@ -24,7 +22,7 @@
 {% else %}
 
 
-<div></div>
+<div>
     <form method="POST" action="">
         {% csrf_token %}
        
@@ -33,7 +31,6 @@
         <input type="submit" value="Register" />
     </form>
         
-    </form>
     <p>Already signed up?</p>
     <a href="{% url 'login' %}">Log in</a>
 </div>
