--- a/DjangoTutorial-main/studybud/base/templates/base/home.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/home.html
@@ -15,9 +15,8 @@
 <div class="home-container">
 
     <div>
-        {% if request.user.is_authenticated %}
-        <h5>{{job_count}} jobs found!</h5>
-        <a href="{% url 'create-Job' %}"></a>
+        {% if user.is_authenticated and user.userprofile.user_type == 'business' %}
+    <a href="{% url 'create-Job' %}" class="btn btn-primary">Create Job Posting</a>
 
         {% include 'base/job_list.html' %}
         {% else %}
