--- a/DjangoTutorial-main/studybud/static/css/styles.css
+++ b/DjangoTutorial-main/studybud/static/css/styles.css
@@ -104,3 +104,19 @@ footer {
 .btn-delete:hover {
     background-color: #e53935; 
 }
+
+.create-job-button {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.create-job-button:hover {
+    background-color: #0056b3;
+}
