--- a/DjangoTutorial-main/studybud/base/templates/base/profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/profile.html
@@ -30,7 +30,7 @@
 <p>Email: {{ user.email }}</p>
 <p>First Name: {{ user.first_name }}</p>
 <p>Last Name: {{ user.last_name }}</p>
-
+{% if user.is_authenticated and user.userprofile.user_type == 'employee' %}
 <h3>Resume:</h3>
 
     {% if profile.resume %}
@@ -56,7 +56,8 @@
         </div>
 
     {% endif %}
-
+{% endif %}
+{% if user.is_authenticated and user.userprofile.user_type == 'business' %}
 <h3>Jobs Posted:</h3>
     {% if jobs %}
         <ul>
@@ -67,7 +68,8 @@
     {% else %}
         <p>No jobs posted yet.</p>
     {% endif %}
-
+{% endif %}
+{% if user.is_authenticated and user.userprofile.user_type == 'employee' %}
 <h3>Sent Applications:</h3>
     {% if job_messages %}
         <ul>
@@ -82,5 +84,5 @@
     <script>
         document.querySelector('input[type="file"]').setAttribute('accept', '.pdf');
     </script>
-
+{% endif %}
 {% endblock content %}
