--- a/DjangoTutorial-main/studybud/base/templates/base/job_list.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/job_list.html
@@ -17,6 +17,11 @@
         <a href="{% url 'user-profile' job.host.id %}">Company: {{ job.host.username }}</a>
         <h5>{{ job.id }} -- <a href="{% url 'job' job.id %}">Position: {{ job.name }}</a></h5>
         <small>{{ job.field.name }}</small>
+        {% if job.host.userprofile and job.host.userprofile.profile_picture %}
+    <img src="{{ job.host.userprofile.profile_picture.url }}" alt="Company Logo">
+    {% else %}
+        <img src="{% static 'default.jpg' %}" alt="Company Logo">
+    {% endif %}
         <hr>
     </div>
     {% endfor %}
