--- a/DjangoTutorial-main/studybud/base/templates/base/home.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/home.html
@@ -15,10 +15,13 @@
 <div class="home-container">
 
     <div>
-        {% if user.is_authenticated and user.userprofile.user_type == 'business' %}
+        {% if user.is_authenticated %}
+        {% if user.userprofile.user_type == 'business' %}
     <a href="{% url 'create-Job' %}" class="btn btn-primary">Create Job Posting</a>
-
+        {% endif %}
+        {% if user.userprofile.user_type == 'employee' %}
         {% include 'base/job_list.html' %}
+        {% endif %}
         {% else %}
         <div class="applyNow">
             <h1>Sign up Now!</h1>
