--- a/DjangoTutorial-main/studybud/base/templates/base/profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/profile.html
@@ -70,19 +70,18 @@
     {% endif %}
 {% endif %}
 {% if user.is_authenticated and user.userprofile.user_type == 'employee' %}
-<h3>Sent Applications:</h3>
-    {% if job_messages %}
+<h3>Applied Jobs:</h3>
+    {% if user.userprofile.applied_jobs.exists %}
         <ul>
-            {% for message in job_messages %}
-                <li>{{ message.body }} (Posted {{ message.created|timesince }} ago)</li>
+            {% for job in user.userprofile.applied_jobs.all %}
+                <li>
+                    <a href="{% url 'job' job.id %}">{{ job.name }}</a>
+                    (Applied {{ job.date_applied|timesince }} ago)
+                </li>
             {% endfor %}
         </ul>
     {% else %}
-        <p>No messages.</p>
+        <p>No applications submitted yet.</p>
     {% endif %}
-
-    <script>
-        document.querySelector('input[type="file"]').setAttribute('accept', '.pdf');
-    </script>
 {% endif %}
 {% endblock content %}
